# container-stats

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
assets/: index.css  update.js
src/: api.rs  leptos_axum.rs  main.rs  websocket.rs
