[package]
name = "stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.16.0"
futures-util = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
axum = { version = "0.6.20", features = ["macros"] }
leptos = { version = "0.5.0", features = ["ssr"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.4", features = ["trace", "fs"] }